--- a/Index.html
+++ b/Index.html
@@ -99,10 +99,11 @@
             <li><strong>Programming:</strong> Still a beginner, but eager to learn.</li>
         </ul>
     </section>
+
     <div>
-        <img src="Travel.jpg" alt="Travel">
-        <img src="Nature.jpg" alt="Nature">
-        <img src="Walking.jpg" alt="Walking">
+        <img src="https://github.com/Sanna-A/Website/assets/143263694/d6d85398-24de-4059-a82f-20c1b5e48016" alt="Travel">
+        <img src="https://github.com/Sanna-A/Website/assets/143263694/33bc44a0-35a8-46f8-9d65-4435701125e8" alt="Nature">
+        <img src="https://github.com/Sanna-A/Website/assets/143263694/33bc44a0-35a8-46f8-9d65-4435701125e8" alt="Walking">
     </div>
 
     <section>
