--- a/Index.html
+++ b/Index.html
@@ -112,7 +112,7 @@
         <p>I'd love to connect with you! Feel free to reach out for collaborations, opportunities, or just to say hello.</p>
         <ul>
             <li><strong>Email:</strong> <a href="mailto:sannaa.abbasi@gmail.com">sannaa.abbasi@gmail.com</a></li>
-            <li><strong>GitHub:</strong> <a href="[Your GitHub Profile]">GitHub Profile</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/Sanna-A">GitHub Profile</a></li>
         </ul>
     </section>
 
@@ -122,7 +122,7 @@
     </section>
 
     <footer>
-        &copy; 2024 Sanna Abbasi
+        <p>&copy; 2024 Sanna Abbasi</p>
     </footer>
 
 </body>
