--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <title>Sanna Abbasi - Personal Website</title>
-   
-        
-       
+    <link rel="stylesheet" href="styles.css">   
 </head>
 <body>
 
